--- a/recipe-starter/main.css
+++ b/recipe-starter/main.css
@@ -19,6 +19,18 @@ body {
 .vote {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
+}
+.vote-style {
+	text-align: center;
+}
+
+.nav-wrapper {
+	margin-bottom: 4em;
+}
+
+.vote h6 {
+	padding: 0em 2em;
 }
 
 /*single post page*/
