--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+
 .brand-logo {
 	margin-left: 1em;
 }
@@ -28,8 +29,37 @@
 	margin-bottom: 4em;
 }
 
+/*nav and hamburger*/
+.hamburger {
+	display: none;
+}
+
+.dropdown {
+	display: none;
+}
+
+/*//////////*/
+
 .vote h6 {
 	padding: 0em 2em;
+}
+
+.col {
+	margin-top: 3em;
+}
+
+.footer-copyright {
+	width: 100%;
+	text-align: center;
+	background-color: #8F78C8;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+	margin-top: 3em;
+}
+
+.footer-copyright .container {
+	color: #FFF;
+	height: 64px;
+	padding-top: 1.5em;
 }
 
 /*single post page*/
@@ -40,11 +70,10 @@
 .ingredients-section {
 	margin: auto;
     width: 60%;
-}
-
-.ingredients {
 
 }
+
+
 
 h5 {
 	text-align: center;
@@ -88,3 +117,83 @@ img {
 textarea {
 	height: 9em;
 }
+
+
+@media screen and (max-width: 760px){ 
+/*	nav .brand-logo {
+		font-size: 16px;
+		margin-left: auto;
+	}
+	nav ul {
+		font-size: 16px;
+		margin: auto;
+	}*/
+
+	.hamburger {
+		display: block;
+	}
+
+	.fa .fas {
+		color: #8F78C8;
+	}
+	.nav-wrapper {
+		display: none;
+	}
+
+	.dropbtn {
+	    background-color: #FFF;
+	    color: white;
+	    padding: 1em;
+	    font-size: 16px;
+	    border: none;
+	    cursor: pointer;
+	    text-align: right;
+	    margin: auto;
+
+	}
+
+	/* Dropdown button on hover & focus */
+	.dropbtn:hover, .dropbtn:focus {
+	    background-color: #2980B9;
+	}
+
+	/* The container <div> - needed to position the dropdown content */
+	.dropdown {
+	    position: relative;
+	    display: inline-block;
+	    float: left;
+	}
+	/* Dropdown Content (Hidden by Default) */
+	.dropdown-content {
+	    display: none;
+	    position: absolute;
+	    background-color: #f1f1f1;
+	    min-width: 160px;
+	    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	    z-index: 99;
+	}
+
+	/* Links inside the dropdown */
+	.dropdown-content a {
+	    color: black;
+	    padding: 12px 16px;
+	    text-decoration: none;
+	    display: block;
+	}
+
+	/* Change color of dropdown links on hover */
+	.dropdown-content a:hover {
+		background-color: #ddd
+	}
+
+	/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+	.show {
+		display:block;
+	}
+	
+ }
+ 
+
+
+
+
